2007-04-02  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Added polygini.pl as a dependency for all the packages (source, debian, etc)
	* Changing version number, as some changes have been applied since release 1.0
	
2007-03-28  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Added ploticus as optional dependency in the README file
	* Added ploticus as suggested package to be installed along with cvsanaly (Debian package version)
	
2007-03-22  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* Release 1.0

2007-01-24  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* graph_utils.py: file removed, no longer needed.
	* repository.py: removed initial & final slash in dir names.
	* main.py: modified usage message with default values.
	* cvsplugin/graphs/graph_activity.py: new graphs added
	* cvsplugin/graphs/graph_heatmaps.py: new graphs added
	* cvsplugin/graphs/graph_inequality.py: new graphs added
	* cvsplugin/graphs/intermediate_tables.py: first_commit function
	* cvsplugin/gluetheos: no needed.

2007-01-23  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* cvsplugins/graphs/graph_gini.py:
	* cvsplugins/graphs/graph_global.py:
	* cvsplugins/graphs/graph_pie.py:
	* cvsplugins/graphs/tables_skeleton.py:

	New grahps added and new way to store directories
	replace '/' with '_' to avoid problems in graphs
	creations.
	rght, left and father_id fields removed from modules
	table

2007-01-23  Alvaro del Castillo <acs@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py
	* pycvsanaly/main.py

	Added --repodir option for indicating the repository dir.
	Auto detected the kind of repository.

2007-01-16  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* main.py:
	* repository:
	* plugins.py:
	* connection:

	New plugins module. Now cvsanaly only extract information
	from cvs/svn into stdout.

2006-12-08  Jesus M. Gonzalez-Barahona <jgb@gsyc.escet.urjc.es>

	* generations.py: Simplified and more generic code. Now